# marsupial

./: .gitignore  CMakeLists.txt  README.md  build-dlib  build-dlib.js  index.js  marsupial.js  package.json
dlib/: CMakeLists.txt
src/: data_parser.h  detector.h  marsupial.cc  trainer.h
test/: marsupial.spec.js
test/fixtures/: object_detector.svm  trainingData.json
test/output/: object_detector.svm
